# volume_path_tracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  configuration.json  main.cpp
include/vpt/: camera.hpp  color.hpp  configuration.hpp  hash.hpp  image.hpp  logging.hpp  majorant_transmittance_sampler.hpp  nanovdb_utils.hpp  random.hpp  ray.hpp  spectral.hpp  tile_provider.hpp  utils.hpp  volume.hpp  volume_grid.hpp  volume_grids.hpp  worker.hpp
scenes/: fire.json  fire_lowscattering.json  wdas_cloud.json
scripts/: plot_dda_trace.py  plot_majorant_trace.py  plot_raytrace.py
src/: camera.cpp  configuration.cpp  image_io.cpp  main.cpp  majorant_transmittance_sampler.cpp  precompute_blackbody.cpp  ray.cpp  ray_visualizer.cpp  spectral.cpp  tile_provider.cpp  vdb_grid_io.cpp  volume.cpp  volume_grids.cpp  worker.cpp
src/spectral_data/: xyz.hpp
